# finalApp-veille

./: README.md
veilleFinal/: .env  Cargo.toml  diesel.toml
veilleFinal/frontend/: package-lock.json  package.json
veilleFinal/frontend/src/: App.css  App.js
veilleFinal/frontend/src/image/: sunset.jfif
veilleFinal/frontend/src/pages/: ImageDetails.js
veilleFinal/frontend/src/providers/: providerImage.js
veilleFinal/src/: main.rs
veilleFinal/src/vue_mock/: image_controller.rs  image_model.rs  image_service.rs  mod.rs  schema.rs
