[package]
name = "veilleFinal"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.5", features = ["postgres"] }
dotenvy = "0.15.6"
image = "0.25.0"
actix-files = "0.6.2"
actix-web = { version = "4" , default-features = false,features = ["macros"] }
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }