[package]
name = "veilleFinal"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.6"
image = "0.25.5"
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-cors = "0.6"
futures-util = "0.3.31"
actix-multipart = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
serde_json = "1.0.133"
